Fixed bg image clipping at bottom of page

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     display: flex;
     background-image: url(images/ff14ew-patch-6-1-newfound-adventures.jpeg);
     background-repeat: no-repeat;
-    background-position: -60% 50%;
-    background-size: 70%;
+    /* background-position: -60% 50%; */
+    background-size: contain;
 }
 
 html {
@@ -59,8 +59,7 @@ html {
 }
 
 img {
-    /* height: 200px;
-    width: auto; */
+    width: 40vw;
     padding-top: 100px;
     background-color: rgba(0, 0, 0, 0.4);
 }
